Show OpenAPI error messages in editor
